--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
@@ -8,11 +8,29 @@
     width: 100%;
 }
 
-.donationlist-container h3 {
-    color: #000000;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+.donationlist-header {
+    display: flex;
+    align-items: center;
     width: 100%;
+    margin-bottom: 20px;
+}
+
+.donationlist-header button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.donationlist-header .main-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.donationlist-header .sub-title {
+    font-size: 1rem;
+    font-weight: normal;
 }
 
 .donationlist-content {
@@ -38,6 +56,13 @@
 
 .donationlist-form .form-group {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.donationlist-form label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
 }
 
 .donationlist-form input[type="date"],
@@ -47,13 +72,15 @@
     border-radius: 5px;
     font-size: 1rem;
     width: 100%;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    height: 40px;
+}
+
+.donationlist-form .form-group-row .form-group {
+    flex: 1;
 }
 
 .donationlist-form button {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
     background-color: #24365C;
     color: #fff;
     font-size: 1.5rem;
@@ -63,6 +90,10 @@
     justify-content: center;
     height: 40px;
     width: 40px;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
+    margin: 0;
 }
 
 .donationlist-form button:hover {
@@ -71,7 +102,7 @@
 
 .donationlist-table {
     width: 100%;
-    max-width: 800px;
+    max-width: 600px; /* Reduciendo el ancho máximo de la tabla */
     border-collapse: collapse;
     background-color: #171A4A;
     border-radius: 7px;
@@ -80,8 +111,8 @@
 
 .donationlist-table th,
 .donationlist-table td {
-    padding: 0.75rem;
-    text-align: left;
+    padding: 0.5rem; /* Reduciendo el espacio interno de las celdas */
+    text-align: center;
     color: #fff;
 }
 
@@ -110,6 +141,11 @@
     margin: 0;
     color: #fff;
     font-size: 1.5rem;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon-button:hover {
