--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal/personal.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal/personal.css
@@ -1,3 +1,29 @@
+.personal-header {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.personal-header button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+
+.personal-header .main-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-right: 0.5rem;
+}
+
+.personal-header .sub-title {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
 .personal-form-container {
     display: flex;
     justify-content: center;
@@ -9,7 +35,7 @@
 }
 
 .personal-form {
-    background-color: #f0f0f0; 
+    background-color: #EEEEEE; 
     padding: 2rem;
     border-radius: 1px;
     width: 100%;
@@ -99,7 +125,7 @@
 .personal-form button {
     padding: 0.7rem;
     margin-top: 1rem;
-    background-color: #171A4A;
+    background-color: #2F2C79;
     color: #ffffff;
     border: none;
     border-radius: 5px;
