--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/returnslist/returnslist.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/returnslist/returnslist.css
@@ -8,11 +8,29 @@
     width: 100%;
 }
 
-.returnslist-container h3 {
-    color: #000000;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+.returnslist-header {
+    display: flex;
+    align-items: center;
     width: 100%;
+    margin-bottom: 20px;
+}
+
+.returnslist-header button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.returnslist-header .main-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.returnslist-header .sub-title {
+    font-size: 1rem;
+    font-weight: normal;
 }
 
 .returnslist-content {
@@ -38,6 +56,13 @@
 
 .returnslist-form .form-group {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.returnslist-form label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
 }
 
 .returnslist-form input[type="date"],
@@ -47,13 +72,15 @@
     border-radius: 5px;
     font-size: 1rem;
     width: 100%;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    height: 40px;
+}
+
+.returnslist-form .form-group-row .form-group {
+    flex: 1;
 }
 
 .returnslist-form button {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
     background-color: #24365C;
     color: #fff;
     font-size: 1.5rem;
@@ -63,6 +90,10 @@
     justify-content: center;
     height: 40px;
     width: 40px;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
+    margin: 0;
 }
 
 .returnslist-form button:hover {
@@ -81,7 +112,7 @@
 .returnslist-table th,
 .returnslist-table td {
     padding: 0.75rem;
-    text-align: left;
+    text-align: center;
     color: #fff;
 }
 
@@ -110,6 +141,11 @@
     margin: 0;
     color: #fff;
     font-size: 1.5rem;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon-button:hover {
