--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanitation/sanitation.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanitation/sanitation.css
@@ -1,6 +1,32 @@
+.sanitation-header {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.sanitation-header button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+
+.sanitation-header .main-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-right: 0.5rem;
+}
+
+.sanitation-header .sub-title {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
 .sanitation-form-container {
     display: flex;
-    flex-direction: column; /* Ajuste para columna */
+    justify-content: center;
     align-items: center;
     padding: 20px;
     background-color: #ffffff;
@@ -9,7 +35,7 @@
 }
 
 .sanitation-form {
-    background-color: #f0f0f0;
+    background-color: #EEEEEE;
     padding: 2rem;
     border-radius: 1px;
     width: 100%;
@@ -18,20 +44,18 @@
     color: #000000;
 }
 
-.sanitation-form-container h3 {
+.sanitation-form h2, .sanitation-form h3 {
     color: #000000;
-    margin-bottom: 1rem;
-    font-size: 1.3rem;
-    text-align: left; 
-    width: 100%; 
-    max-width: 800px; 
 }
 
 .sanitation-form h2 {
-    color: #000000;
     margin-bottom: 1rem;
     font-size: 1.2rem;
-    text-align: left;
+}
+
+.sanitation-form h3 {
+    margin-bottom: 1rem;
+    font-size: 1rem;
 }
 
 .sanitation-form .form-group {
@@ -41,33 +65,73 @@
     width: 100%;
 }
 
+.sanitation-form .form-group-row {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.sanitation-form .form-group-row .form-group {
+    flex: 1;
+    margin-right: 1rem;
+}
+
+.sanitation-form .form-group-row .form-group:last-child {
+    margin-right: 0;
+}
+
 .sanitation-form label {
     margin-bottom: 0.5rem;
     color: #333;
     font-weight: bold;
-    text-align: left; 
 }
 
 .sanitation-form input[type="text"],
+.sanitation-form input[type="email"],
 .sanitation-form input[type="date"],
-.sanitation-form select {
+.sanitation-form input[type="file"],
+.sanitation-form select,
+.sanitation-form textarea {
     padding: 0.5rem;
     border: 1.5px solid #333;
-    border-radius: 3px;
+    border-radius: 5px;
     font-size: 1rem;
     margin-bottom: 0.5rem;
 }
 
-.sanitation-form .form-group-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+.sanitation-form input[type="file"] {
+    display: none; /* Oculta el input de archivo real */
 }
 
-.sanitation-form .volver-button,
+.sanitation-form .form-group.file-upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.sanitation-form .form-group.file-upload label {
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+.sanitation-form .form-group.file-upload label img {
+    width: 50px; /* Ajusta el tamaño según sea necesario */
+    height: 50px;
+}
+
+.sanitation-form .form-group-buttons {
+    display: flex;
+    justify-content: center;
+}
+
 .sanitation-form .registrar-button {
     padding: 0.7rem;
-    background-color: #171A4A;
+    margin-top: 1rem;
+    background-color: #2F2C79;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -75,21 +139,9 @@
     font-size: 1rem;
     font-weight: bold;
     width: 150px;
-}
-
-.sanitation-form .volver-button {
-    background-color: #ccc;
-    color: #000;
-}
-
-.sanitation-form .registrar-button {
-    background-color: #171A4A;
+    align-self: center;
 }
 
 .sanitation-form .registrar-button:hover {
     background-color: #000;
-}
-
-.sanitation-form .volver-button:hover {
-    background-color: #aaa;
 }
