--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control-list/inventory-control-list.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control-list/inventory-control-list.css
@@ -10,13 +10,16 @@
   font-size: 24px;
   text-align: left;
   margin-bottom: 20px;
+  font-weight: normal;
 }
 
 .inventory-list-controls-container {
   display: flex;
   align-items: center;
-  justify-content: space-between; 
+  justify-content: flex-end; 
   margin-bottom: 20px;
+  gap: 10px; 
+  flex-wrap: wrap;
 }
 
 .inventory-list-search-container {
