--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
@@ -80,21 +80,6 @@
     flex: 1;
 }
 
-.donationlist-form button {
-    background-color: #24365C;
-    color: #fff;
-    font-size: 1.5rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 40px;
-    padding: 0;
-    border: none;
-    border-radius: 5px;
-    margin: 0;
-}
 
 .donationlist-form button:hover {
     background-color: #1A2C48;
@@ -102,7 +87,7 @@
 
 .donationlist-table {
     width: 100%;
-    max-width: 600px; /* Reduciendo el ancho máximo de la tabla */
+    max-width: 600px;
     border-collapse: collapse;
     background-color: #171A4A;
     border-radius: 7px;
@@ -111,7 +96,7 @@
 
 .donationlist-table th,
 .donationlist-table td {
-    padding: 0.5rem; /* Reduciendo el espacio interno de las celdas */
+    padding: 0.5rem; 
     text-align: center;
     color: #fff;
 }
@@ -133,19 +118,13 @@
     background-color: #2C4878;
 }
 
-.icon-button {
+
+.icon-button{
     background: none;
     border: none;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
-    color: #fff;
     font-size: 1.5rem;
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    cursor: pointer;
+    margin-right: 10px;
 }
 
 .icon-button:hover {
