--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/guard-management/guard-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/guard-management/guard-management.css
@@ -21,7 +21,7 @@
         margin-right: 10px;
     }
 
-    .guard-header .icon-button{
+    .guard-header .icon-button-guard{
         background: none;
         border: none;
         padding: 0;
