--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/create-guard-modal/create-guard-modal.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/create-guard-modal/create-guard-modal.css
@@ -17,7 +17,7 @@
     width: 400px;
 }
 
-.modal-guard .icon-button{
+.modal-guard button{
     background: none;
     border: none;
     padding: 0;
