--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationinventory/donationinventory.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationinventory/donationinventory.css
@@ -19,17 +19,20 @@
 }
 
 .donationinventory-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 20px;
 }
 
 .donationinventory-header button {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    padding: 0;
+    font-size: 2rem;
     cursor: pointer;
+    display: flex;
+    align-items: end;
     margin-right: 10px;
 }
 
@@ -122,20 +125,6 @@
 
 .donationinventory-table tbody tr:nth-child(even) {
     background-color: #f2f2f2;
-}
-
-.icon-button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
-    color: #ffffff;
-    font-size: 1.2rem;
-}
-
-.icon-button:hover {
-    color: #ccc;
 }
 
 .donationinventory-form .form-buttons {
