--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/donationlist/donationlist.css
@@ -1,93 +1,37 @@
 .donationlist-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
-    padding: 20px;
-    background-color: #ffffff;
-    min-height: 100vh;
-    width: 100%;
+    margin: 35px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: #ffffff; 
 }
 
 .donationlist-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 20px;
 }
 
 .donationlist-header button {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    padding: 0;
+    font-size: 2rem;
     cursor: pointer;
+    display: flex;
+    align-items: end;
     margin-right: 10px;
 }
 
-.donationlist-header .main-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.donationlist-header .sub-title {
-    font-size: 1rem;
-    font-weight: normal;
-}
-
-.donationlist-content {
+.donationsList-actions {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.donationlist-form {
-    width: 100%;
-    max-width: 800px;
-    margin-bottom: 20px;
-}
-
-.donationlist-form .form-group-row {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-    align-items: center;
-}
-
-.donationlist-form .form-group {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.donationlist-form label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-}
-
-.donationlist-form input[type="date"],
-.donationlist-form select {
-    padding: 0.5rem;
-    border: 1.5px solid #333;
-    border-radius: 5px;
-    font-size: 1rem;
-    width: 100%;
-    box-sizing: border-box;
-    height: 40px;
-}
-
-.donationlist-form .form-group-row .form-group {
-    flex: 1;
-}
-
-
-.donationlist-form button:hover {
-    background-color: #1A2C48;
+    margin-bottom: 10px;
 }
 
 .donationlist-table {
     width: 100%;
-    max-width: 600px;
     border-collapse: collapse;
     background-color: #171A4A;
     border-radius: 7px;
@@ -118,15 +62,31 @@
     background-color: #2C4878;
 }
 
-
-.icon-button{
+.icon-button-donation-list{
     background: none;
     border: none;
-    font-size: 1.5rem;
     cursor: pointer;
-    margin-right: 10px;
+    padding: 0;
+    margin: 0;
+    color: #fff;
+    font-size: 3rem; /* Adjusted to match the icon-button in GuardManagement */
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.icon-button:hover {
+.icon-button-donation-list:hover {
     color: #ccc;
+}
+
+.icon-button-list-donation{
+    display: flex;
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 3rem;
+    cursor: pointer;
+    align-items: end;
 }
