--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/dropdown-input-search/dropdown-input-search.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/dropdown-input-search/dropdown-input-search.css
@@ -4,7 +4,7 @@
     align-items: center;
     margin-bottom: 10px;
     height: 2rem; 
-    margin: 5px;
+    margin: 5px 5px 5px 0;
 }
 
 .dropdown-Input-search .selected-option {
