--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal/personal.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal/personal.css
@@ -1,16 +1,19 @@
 .personal-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
-    font-size: 1rem;
-    margin-bottom: 1rem;
+    width: 100%;
 }
 
 .personal-header button {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    padding: 0;
+    font-size: 2rem;
     cursor: pointer;
-    margin-right: 0.5rem;
+    display: flex;
+    align-items: end;
+    margin-right: 10px;
 }
 
 .personal-header .main-title {
