--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/reportguards/reportguards.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/reportguards/reportguards.css
@@ -1,94 +1,41 @@
 .reportguards-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-    background-color: #ffffff;
-    min-height: 100vh;
-    width: 100%;
+    margin: 35px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: #ffffff; 
 }
 
 .reportguards-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 20px;
 }
 
 .reportguards-header button {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    padding: 0;
+    font-size: 2rem;
     cursor: pointer;
+    display: flex;
+    align-items: end;
     margin-right: 10px;
 }
 
-.reportguards-header .main-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.reportguards-header .sub-title {
-    font-size: 1rem;
-    font-weight: normal;
-}
-
-.reportguards-content {
+.reportguards-actions {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.reportguards-form {
-    width: 100%;
-    max-width: 800px;
-    margin-bottom: 20px;
-}
-
-.reportguards-form .form-group-row {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-}
-
-.reportguards-form .form-group {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.reportguards-form label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-    color: #333;
-}
-
-.reportguards-form input[type="date"],
-.reportguards-form select {
-    padding: 0.5rem;
-    border: 1.5px solid #333;
-    border-radius: 5px;
-    font-size: 1rem;
-    width: calc(100% - 12px); 
-    height: 40px;
-    box-sizing: border-box;
-}
-
-.reportguards-form .form-group select {
-    height: 40px; 
+    margin-bottom: 10px;
 }
 
 .reportguards-table {
     width: 100%;
-    max-width: 800px;
     border-collapse: collapse;
-    background-color: #171a4a;
+    background-color: #171A4A;
     border-radius: 7px;
     overflow: hidden;
-    text-align: center;
 }
 
 .reportguards-table th,
@@ -113,4 +60,14 @@
 
 .reportguards-table tbody tr:hover {
     background-color: #2c4878;
+}
+
+.icon-button-reportguards{
+    display: flex;
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 3rem;
+    cursor: pointer;
+    align-items: end;
 }
