--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/returnslist/returnslist.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/returnslist/returnslist.css
@@ -1,91 +1,37 @@
 .returnslist-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
-    padding: 20px;
-    background-color: #ffffff;
-    min-height: 100vh;
-    width: 100%;
+    margin: 35px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: #ffffff; 
 }
 
 .returnslist-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 20px;
 }
 
 .returnslist-header button {
     background: none;
     border: none;
     padding: 0;
-    font-size: 3rem;
+    font-size: 2rem;
     cursor: pointer;
-}
-
-.returnslist-header .main-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.returnslist-header .sub-title {
-    font-size: 1rem;
-    font-weight: normal;
-}
-
-.returnslist-content {
     display: flex;
-    flex-direction: column;
+    align-items: end;
+    margin-right: 10px;
+}
+
+.returnslist-actions {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.returnslist-form {
-    width: 100%;
-    max-width: 800px;
-    margin-bottom: 20px;
-}
-
-.returnslist-form .form-group-row {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-}
-
-.returnslist-form .form-group {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.returnslist-form label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-}
-
-.returnslist-form input[type="date"],
-.returnslist-form select {
-    padding: 0.5rem;
-    border: 1.5px solid #333;
-    border-radius: 5px;
-    font-size: 1rem;
-    width: 100%;
-    box-sizing: border-box;
-    height: 40px;
-}
-
-.returnslist-form .form-group-row .form-group {
-    flex: 1;
-}
-
-.returnslist-form button:hover {
-    background-color: #1A2C48;
+    margin-bottom: 10px;
 }
 
 .returnslist-table {
     width: 100%;
-    max-width: 800px;
     border-collapse: collapse;
     background-color: #171A4A;
     border-radius: 7px;
@@ -116,7 +62,7 @@
     background-color: #2C4878;
 }
 
-.icon-button {
+.icon-button-return-list {
     background: none;
     border: none;
     cursor: pointer;
@@ -131,6 +77,6 @@
     justify-content: center;
 }
 
-.icon-button:hover {
+.icon-button-return-list:hover {
     color: #ccc;
 }
