--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanitation/sanitation.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanitation/sanitation.css
@@ -1,27 +1,19 @@
 .sanitation-header {
+    font-weight: normal;
     display: flex;
     align-items: center;
-    font-size: 1rem;
-    margin-bottom: 1rem;
+    width: 100%;
 }
 
 .sanitation-header button {
     background: none;
     border: none;
-    font-size: 1.5rem;
+    padding: 0;
+    font-size: 2rem;
     cursor: pointer;
-    margin-right: 0.5rem;
-}
-
-.sanitation-header .main-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-right: 0.5rem;
-}
-
-.sanitation-header .sub-title {
-    font-size: 1rem;
-    font-weight: normal;
+    display: flex;
+    align-items: end;
+    margin-right: 10px;
 }
 
 .sanitation-form-container {
@@ -42,20 +34,6 @@
     max-width: 1000px;
     overflow-y: auto;
     color: #000000;
-}
-
-.sanitation-form h2, .sanitation-form h3 {
-    color: #000000;
-}
-
-.sanitation-form h2 {
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-}
-
-.sanitation-form h3 {
-    margin-bottom: 1rem;
-    font-size: 1rem;
 }
 
 .sanitation-form .form-group {
