--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/search-bar-styles.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/search-bar-styles.css
@@ -10,7 +10,7 @@
     border-radius: 8px;
     height: 2rem;
     padding-left: 0.5rem;
-    margin: 5px;
+    margin: 5px 5px 5px 0
 }
   
 .sar-search-input {
