--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control-list/inventory-control-list.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control-list/inventory-control-list.css
@@ -13,6 +13,24 @@
   font-weight: normal;
 }
 
+.inventory-list-header {
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+  .inventory-list-header button {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: end;
+    margin-right: 10px;
+  }
+
 .inventory-list-controls-container {
   display: flex;
   align-items: center;
@@ -34,8 +52,6 @@
   border-radius: 5px;
   flex: 1;
 }
-
-
 
 .inventory-list-type-select {
   width: 200px; 
@@ -61,4 +77,15 @@
   padding: 12px;
   text-align: left;
   border: 1px solid #ffffff;
+}
+
+.inventory-list-btn-options {
+  display: flex;
+  background: none;
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
 }
