--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/create_operating/create_operations.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/create_operating/create_operations.css
@@ -1,19 +1,32 @@
 .create_operativo-form-container {
+    margin: 35px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: #ffffff;
+}
+
+.create_operativo-header {
+    font-weight: normal;
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 20px;
-    background-color: #ffffff; 
-    min-height: 100vh;
     width: 100%;
 }
+  
+  .create_operativo-header button {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: end;
+    margin-right: 10px;
+  }
 
 .create_operativo-form {
     background-color: #f0f0f0; 
     padding: 2rem;
-    border-radius: 1px;
-    width: 100%;
-    max-width: 1000px;
+    border-radius: 5px;
     overflow-y: auto;
     color: #000000;
 }
@@ -108,7 +121,7 @@
 .create_operativo-form button {
     padding: 0.7rem;
     margin-top: 1rem;
-    background-color: #171A4A;
+    background-color: #2F2C79;
     color: #ffffff;
     border: none;
     border-radius: 5px;
