--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control/inventory-control.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory-control/inventory-control.css
@@ -85,3 +85,13 @@
   .inventory-control-controls-container {
     margin-left: auto;
   }
+
+  .inventory-btn-options {
+    background: none;
+    border: none;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+  }
