--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory_delivery/inventory_delivery.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/inventory_delivery/inventory_delivery.css
@@ -1,4 +1,4 @@
-.inventoryReturn-container {
+.inventoryDelivery-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,8 +8,8 @@
     width: 100%;
 }
 
-.inventoryReturn-form {
-    background-color: #f0f0f0;
+.inventoryDelivery-form {
+    background-color: #EEEEEE;
     padding: 2rem;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 1.95px 1.95px 10px;
@@ -18,40 +18,49 @@
     color: #000000;
 }
 
-.inventoryReturn-form h2, .inventoryReturn-form h3 {
-    color: #000000;
+.inventoryDelivery-header {
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
-.inventoryReturn-form h3 {
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-}
+    .inventoryDelivery-header button {
+        background: none;
+        border: none;
+        padding: 0;
+        font-size: 2rem;
+        cursor: pointer;
+        display: flex;
+        align-items: end;
+        margin-right: 10px;
+    }
 
-.inventoryReturn-form .form-group {
+.inventoryDelivery-form .form-group {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
     width: 100%;
 }
 
-.inventoryReturn-form .form-group-row {
+.inventoryDelivery-form .form-group-row {
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
 }
 
-.inventoryReturn-form .form-group-row .form-group {
+.inventoryDelivery-form .form-group-row .form-group {
     flex: 1;
 }
 
-.inventoryReturn-form label {
+.inventoryDelivery-form label {
     margin-bottom: 0.5rem;
     color: #333;
     font-weight: bold;
 }
 
-.inventoryReturn-form input[type="text"],
-.inventoryReturn-form select {
+.inventoryDelivery-form input[type="text"],
+.inventoryDelivery-form select {
     padding: 0.5rem;
     border: 1.5px solid #333;
     border-radius: 5px;
@@ -59,9 +68,9 @@
     margin-bottom: 0.5rem;
 }
 
-.inventoryReturn-form button {
+.inventoryDelivery-form button {
     padding: 0.7rem;
-    background-color: #24365C;
+    background-color: #2F2C79;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -71,11 +80,7 @@
     width: 100px;
 }
 
-.inventoryReturn-form button:hover {
-    background-color: #1A2C48;
-}
-
-.inventoryReturn-table {
+.inventoryDelivery-table {
     width: 80%;
     border-collapse: collapse;
     background-color: #ffffff;
@@ -85,52 +90,41 @@
     color: #000000;
 }
 
-.inventoryReturn-table th,
-.inventoryReturn-table td {
+.inventoryDelivery-table th,
+.inventoryDelivery-table td {
     padding: 0.75rem;
-    text-align: left;
+    text-align: center;
     border: 1px solid #dddddd;
 }
 
-.inventoryReturn-table th {
-    background-color: #24365C;
+.inventoryDelivery-table th {
+    background-color: #2F2C79;
     color: #ffffff;
     font-weight: bold;
 }
 
-.inventoryReturn-table tbody tr:nth-child(even) {
+.inventoryDelivery-table tbody tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-.inventoryReturn_center-button {
+.inventoryDelivery-form .form-buttons {
+    margin-top: 1rem; 
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 
-.inventoryReturn_center_titulo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-.inventoryReturn_icon-button {
+
+.inventoryDelivery-header button {
     background: none;
     border: none;
+    font-size: 1.5rem;
     cursor: pointer;
     padding: 0;
     margin: 0;
-    color: #ffffff;
-    font-size: 1.2rem;
+    color: rgb(0, 0, 0)
+    
 }
 
-.inventoryReturn_icon-button:hover {
-    color: #ccc;
-}
-
-.inventoryReturn-form .form-buttons {
-    margin-top: 1rem; /* Espacio entre la tabla y el botón registrar */
-    display: flex;
-    justify-content: center;
+.inventoryDelivery-form .icon-button-trash {
+    color: #ffffff; 
 }
