--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/layout-sar/layout-sar.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/layout-sar/layout-sar.css
@@ -34,7 +34,6 @@
     width: 90%;
 }
 
-
 .sar-menu-item {
     display: flex;
     align-items: center;
@@ -50,12 +49,16 @@
 
 .sar-menu-item:hover {
     color: #ffffff;
-    background-color: #171A4A;
-    
+    background-color: #171A4A;    
 }
     .sar-menu-item svg{
         font-size: 2.5rem;
     }
+
+.sar-menu-item-selected {
+    color: #ffffff;
+    background-color: #171A4A;
+}
 
 .sar-main-container main {
     flex-grow: 1;
