--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal_operations_report/personal_operations_report.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/personal_operations_report/personal_operations_report.css
@@ -1,18 +1,33 @@
 .personalOperationsReport-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
-    padding: 20px;
+    margin: 35px;
+    padding: 30px;
+    border-radius: 10px;
     background-color: #ffffff;
-    min-height: 100vh;
-    width: 100%;
 }
 
-.personalOperationsReport-container h3 {
-    color: #000000;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+.personalOperationsReport-header {
+    font-weight: normal;
+    display: flex;
+    align-items: center;
     width: 100%;
+  }
+  
+    .personalOperationsReport-header button {
+      background: none;
+      border: none;
+      padding: 0;
+      font-size: 2rem;
+      cursor: pointer;
+      display: flex;
+      align-items: end;
+      margin-right: 10px;
+    }
+
+.personalOperationsReport-actions {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .personalOperationsReport-content {
@@ -75,7 +90,6 @@
 
 .personalOperationsReport-table {
     width: 100%;
-    max-width: 800px;
     border-collapse: collapse;
     background-color: #171A4A;
     border-radius: 7px;
