--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-register-management/airship-register-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-register-management/airship-register-management.css
@@ -53,7 +53,19 @@
   }
   
 
+  .airship-register-management-container .info-section .label-input-container .time-inputs {
+    display: flex;
+    gap: 10px; /* Espacio entre los inputs */
+}
 
+.airship-register-management-container .info-section .label-input-container .time-inputs input[type="number"] {
+    width: 345px; /* Ajustar el ancho del input */
+    height: 40px; /* Ajustar la altura del input */
+    font-size: 20px; /* Aumentar el tamaño de la fuente */
+    padding: 10px; /* Agregar espacio interno */
+    border: 1px solid #ccc; /* Borde del input */
+    border-radius: 4px; /* Bordes redondeados */
+}
 
 
 
