--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
@@ -6,6 +6,7 @@
   background-color: white;
   margin-top: 30px;
   color: #000;
+  overflow-y: auto;
 }
 
 .pilot-management-container .pilot-table {
