--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-airship-role/pilot-airship-role-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-airship-role/pilot-airship-role-management.css
@@ -6,6 +6,7 @@
     background-color: white;
     margin-top: 30px;
     color: #000;
+    overflow-y: auto;
   }
 
   .pilotairship-management-container .small-text{
@@ -21,7 +22,7 @@
   .pilotairship-management-container .bigTable th, .pilotairship-management-container .bigTable td {
     text-align: center;
     padding: 5px;
-    font-size: 11px;
+    font-size: 12px;
     border-bottom: 1px solid #ddd; /* Add horizontal border */
   }
   
@@ -33,8 +34,23 @@
     background-color: #393343; /* Light gray background color on hover */
   }
 
+  .pilotairship-management-container .bigTable .smallTable {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
   .pilotairship-management-container .bigTable .smallTable tr{
     background-color: #7e7e7e;
+  }
+
+  .pilotairship-management-container .bigTable .smallTable td{
+    border-right: none;
+    border-left: none;
+    padding: 4px;
+  }
+
+  .pilotairship-management-container .bigTable .smallTable .airship-role-cell{
+    padding: 8px;
   }
   
   .pilotairship-management-edit-button{
