--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-manuals/maintenance-manuals.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-manuals/maintenance-manuals.css
@@ -28,61 +28,62 @@
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    overflow-x: scroll;
     display: flex;
     width: 100%;
+    height: 100px;
     text-align: left;
     align-items: center;
     transition: all 0.2s ease-in-out;
-    border: solid 1px transparent;
-    cursor: pointer;
-    white-space: nowrap;
+    border: 2px solid transparent;
 }
 
 .maintenance-manuals-container .maintenance-card:hover{
-    border: #000 1px solid;
-    margin-left: 20px;
+    border: #171A4A 2px solid;
 }
 
 .maintenance-manuals-container .maintenance-card-image {
-    width: 100px;
-    height: 100px;
+    height: 75%;
     object-fit: contain;
     flex-shrink: 0;
-    margin-left: 15px;
-}
-
-.maintenance-manuals-container .maintenance-card-description {
-    padding: 10px 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-grow: 1;
-}
-
-.maintenance-manuals-container .maintenance-card-description h2 {
-    font-size: 18px;
-    color: #207DA4;
-    margin: 0;
-}
-
-.maintenance-manuals-container .maintenance-card-description h3 {
-    font-size: 16px;
-    color: red;
-    margin: 0;
+    margin: 16px;
 }
 
 .maintenance-manuals-container .maintenance-card-description h4 {
-    font-size: 15px;
-    color: #207DA4;
     margin: 0;
 }
 
-.maintenance-manuals-container .maintenance-card-description p {
-    font-size: 14px;
-    color: black;
-    margin: 0;
+.maintenance-manuals-container .maintenance-card-description {
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    justify-content: space-evenly;
+    flex-grow: 1;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+    text-decoration: none;
+    color: #000;
 }
+
+.maintenance-manuals-container .maintenance-card-description span{
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 16px;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.maintenance-manuals-container .maintenance-card-description:hover span{
+    transform: translateY(0);
+}
+
 
 .maintenance-manuals-container .maintenance-aeronave-main {
     width: 100%;
