Cambio de Ejemplo

--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-edit-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/airship-management/airship-edit-management.css
@@ -91,7 +91,7 @@
 
 .airship-edit-management-container .aeronave-container .edit-button {
     color: white;
-    background-color: #171A4A;
+    background-color: #161a4c;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
