--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-manuals/maintenance-manuals.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-manuals/maintenance-manuals.css
@@ -53,11 +53,8 @@
 }
 
 .maintenance-manuals-container .maintenance-card-description {
-    padding-left: 16px;
     display: flex;
-    flex-direction: column;
     gap: 8px;
-    justify-content: space-evenly;
     flex-grow: 1;
     cursor: pointer;
     overflow: hidden;
@@ -65,6 +62,15 @@
     height: 100%;
     text-decoration: none;
     color: #000;
+}
+
+.maintenance-manuals-container .maintenance-card-description div {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    flex-grow: 1;
+    height: 100%;
+    padding: 8px 16px;
 }
 
 .maintenance-manuals-container .maintenance-card-description span {
