--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/ControlInspectionNew/Inspection.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/ControlInspectionNew/Inspection.css
@@ -52,6 +52,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%; 
+   
 }
 
 .maintenance-alerts-container .alerts-table {
@@ -124,3 +125,28 @@
     font-size: 16px;
     margin-left: 16px;
 }
+
+.maintenance-alerts-container .form-inspection{
+    height: 90%;
+    width: 95%;
+    border-radius: 16px;
+    padding: 20px;
+    background-color: #171A4A;
+    color: #eee;
+}
+
+.maintenance-alerts-container .form-button {
+    display: flex;
+    gap: 8px;
+    background-color: #eee;
+    color: #171A4A;
+    font-size: 16pt;
+    padding: 8px 32px 8px 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    margin-right: 16px; /* Ajuste de separación */
+}
+
